# Scrabblatan

./: .gitignore  ChangeLog.md  LICENSE  Makefile  README.md  scrabblatan.cabal  stack.yaml
Scrabblatan/: Dictionary.hs  Scrabble.hs  Solver.hs  SuffixMap.hs  SuffixTable.hs  SuffixTablify.hs  Util.hs
Scrabblatan/Scrabble/: Board.hs  Bonus.hs  Config.hs  Core.hs  Move.hs  Rack.hs  ScrabbleWord.hs  Tile.hs
dictionaries/: dutch-valid
scrabblatan-cli/: Main.hs
test/unit/Scrabblatan/: SuffixTableSpec.hs
test/unit/Scrabblatan/Scrabble/: BoardSpec.hs  ConfigSpec.hs  MoveSpec.hs  RackSpec.hs  TileSpec.hs
