name:                scrabblatan
version:             0.0.1

license:             BSD3
license-file:        LICENSE
author:              Ward Van Assche
maintainer:          ward.v.assche@gmail.com

build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options: -Wall -Werror -threaded

  exposed-modules:   Scrabblatan.Scrabble,
                     Scrabblatan.Scrabble.Config,
                     Scrabblatan.SuffixTable,
                     Scrabblatan.Solver,
                     Scrabblatan.Util
  build-depends:     array,
                     base,
                     containers,
                     text,
                     vector,
                     vector-algorithms
  default-language:  Haskell2010

test-suite unit-tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test/unit
  main-is:           Spec.hs
  build-depends:     base,
                     hspec,
                     scrabblatan,
                     vector
  default-language:  Haskell2010
