name:                scrabblatan
version:             0.0.1

license:             BSD3
license-file:        LICENSE
author:              Ward Van Assche
maintainer:          ward.v.assche@gmail.com

build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options: -Wall -Werror -threaded

  exposed-modules:   Scrabblatan.Dictionary,
                     Scrabblatan.Scrabble,
                     Scrabblatan.Scrabble.Board,
                     Scrabblatan.Scrabble.Bonus,
                     Scrabblatan.Scrabble.Config,
                     Scrabblatan.Scrabble.ScrabbleWord,
                     Scrabblatan.Scrabble.Rack,
                     Scrabblatan.Scrabble.Tile,
                     Scrabblatan.SuffixMap,
                     Scrabblatan.SuffixTable,
                     Scrabblatan.Solver,
                     Scrabblatan.Util
  build-depends:     array,
                     base,
                     containers,
                     hashable,
                     unordered-containers,
                     mtl,
                     text,
                     vector,
                     vector-algorithms
  default-language:  Haskell2010

executable scrabblatan-cli
  main-is: Main.hs
  hs-source-dirs: scrabblatan-cli
  default-language: Haskell2010
  ghc-options: -Wall -Werror -threaded -rtsopts
  build-depends:     base,
                     optparse-applicative,

                     scrabblatan

test-suite unit-tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test/unit
  main-is:           Spec.hs
  other-modules:     Scrabblatan.Scrabble.BoardSpec,
                     Scrabblatan.Scrabble.ConfigSpec,
                     Scrabblatan.Scrabble.RackSpec,
                     Scrabblatan.Scrabble.TileSpec,
                     Scrabblatan.SuffixMapSpec
                     Scrabblatan.SuffixTableSpec
  build-depends:     base,
                     containers,
                     hspec,
                     scrabblatan,
                     time,
                     vector
  default-language:  Haskell2010
